add param opt